--- a/bin/help/index.html
+++ b/bin/help/index.html
@@ -28,6 +28,8 @@
 					<li><a href="#1_1">How does this work?</a></li>
 					<li><a href="#1_2">I'm not seeing any changes…</a></li>
 					<li><a href="#1_3">How do I add plugins?</a></li>
+					<li><a href="#1_6">Can I change the location of the plugin storage?</a></li>
+					<li><a href="#1_5">Can I share a plugin storage?</a></li>
 					<li><a href="#1_4">I have some bugs / requests / suggestions…</a></li>
 				</ul>
 				<dl class="faq">
@@ -37,6 +39,10 @@
 				    <dd>You need to restart your browser to load the new plugin. If you're using Chrome, disable the built-in Flash Player plugin.</dd>
 				  <dt id="1_3">How do I add plugins?</dt>
 				    <dd>There is a 'Download more…' button where it is possible to download some prepared plugins. If you need different versions or you don't trust the source (nothing was changed, but if you want to be really sure), you can download plugins from the <a href="http://kb2.adobe.com/cps/142/tn_14266.html">Adobe website <img src="extlink.gif"></a>, install them and use the tool to add those plugins to the storage. Make sure you use the uninstaller when trying to install older versions of the plugin when you get errors during the install.</dd>
+				  <dt id="1_6">Can I change the location of the plugin storage?</dt>
+				    <dd>In the preferences window the storage location can be changed to whatever directory you choose. All current data and plugins is moved to this new location.</dd>
+				  <dt id="1_5">Can I share a plugin storage?</dt>
+				    <dd>Although yet untested, you could change the location of the storage to a synced directory (for example using <a href="http://db.tt/hwa37TK">Dropbox <img src="extlink.gif"></a>). One person should be the maintainer of the storage location and others us the location as read-only. Uncheck the allow editing checkbox to disable changing the storage data and plugins.</dd>
 				  <dt id="1_4">I have some bugs / requests / suggestions…</dt>
 				    <dd>I'm open for suggestions, so please <a href="https://github.com/jvanoostveen/Flash-Player-Switcher/issues">add an issue here <img src="extlink.gif"></a>.</dd>
 			</div>
