Added FDT5 logo as a special thanks to Powerflasher

--- a/bin/help/index.html
+++ b/bin/help/index.html
@@ -52,6 +52,11 @@
 					<ul class="section_menu">
 						<li><a href="#1">Basic information</a></li>
 					</ul>
+					
+					<div id="madewith">
+					Made with<br />
+					<a href="http://fdt.powerflasher.com/"><img src="fdt5.png"></a>
+					</div>
 				</div>
 			</div>
 		</div>
