--- a/bin/help/index.html
+++ b/bin/help/index.html
@@ -34,9 +34,9 @@
 				</ul>
 				<dl class="faq">
 				  <dt id="1_1">How does this work?</dt>
-				    <dd>When plugins are placed in the users 'Internet Plug-Ins' folder, those are loaded instead of the system 'Internet Plug-Ins'. As this tool places files inside the users library, no password is needed.</dd>
+				    <dd>When plugins are placed in the users 'Internet Plug-Ins' folder, those are loaded instead of the system 'Internet Plug-Ins'. As this tool places files inside the users library, no password is needed.<br>Note: It is best to disable the automatic updating of the Flash Player plugin.</dd>
 				  <dt id="1_2">I'm not seeing any changes...</dt>
-				    <dd>You need to restart your browser to load the new plugin. If you're using Chrome, disable the built-in Flash Player plugin.</dd>
+				    <dd>You need to restart your browser to load the new plugin. If you're using Chrome, disable the built-in Flash Player plugin. Please note that installing a Flash Player plugin by using the installer will remove the plugin placed in the user library directory.</dd>
 				  <dt id="1_3">How do I add plugins?</dt>
 				    <dd>There is a 'Download more…' button where it is possible to download some prepared plugins. If you need different versions or you don't trust the source (nothing was changed, but if you want to be really sure), you can download plugins from the <a href="http://kb2.adobe.com/cps/142/tn_14266.html">Adobe website <img src="extlink.gif"></a>, install them and use the tool to add those plugins to the storage. Make sure you use the uninstaller when trying to install older versions of the plugin when you get errors during the install.</dd>
 				  <dt id="1_6">Can I change the location of the plugin storage?</dt>
